# xiny

./: .gitignore  Cargo.toml  Dockerfile  README.md
misc/: rationale.md
src/: ansi.rs  argparse.rs  args.rs  conf.rs  cycler.rs  data.rs  debug.rs  find.old.rs  find.rs  futile.rs  iana.rs  lang.rs  main.rs  render.rs  repo.rs  search_engines.rs  shell.rs  start.rs  table.rs  utils.rs  xiny.rs
src/database/: database.rs  mod.rs  repository.rs
src/language/: iana_tags.rs  language.rs  mod.rs
src/search/engines/: fuzzy.rs  mod.rs  regex.rs  terms.rs
src/search_old/engines/: fuzzy.rs  mod.rs  terms.rs
src/tui/: boxchars.rs  component.rs  event_loop.rs  input_handler.rs  mod.rs  point.rs  tui.rs  widget.rs
src/tui/components/: input_field.rs  mod.rs  previewer.rs
src/tui/render/: input_field.rs  mod.rs  previewer.rs
src/tui/widgets/: input_field.rs  mod.rs  previewer.rs
