[package]
name = "xiny"
version = "0.0.0"
edition = "2021"
description = "Not Ready. Still in development, name reserved. Repo currently private. Look forward to the most convenient LearnXinYminutes CLI & TUI fuzy finder combo :)"
license-file = "LICENSE"
readme = "README.md"

exclude = [
  ".github",
  "target",
  "src.reserved/"
]

repository = "https://github.com/PsychedelicShayna/xiny"
homepage = "https://github.com/PsychedelicShayna/xiny"

categories = ["command-line-utilities", "command-line-interface"]
keywords = ["xiny", "learnxiny", "tui", "cli", "reference" ]

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.33"
crossbeam = "0.8.4"
crossterm = "0.28.1"
dirs = "5.0.1"
fuzzy-matcher = "0.3.7"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.11.0"
