[package]
name = "xiny"
version = "0.1.0"
edition = "2021"
description = "Read Learn X in Y Minutes docs in your terminal, in every language, with any Markdown viewer! The database is downloaded for you automatically! The only hard requirement is Git."
license = "GPL-3.0-or-later"
repository = "https://github.com/PsychedelicShayna/xiny"
keywords = ["learnxinyminutes", "docs", "cli", "cheatsheet"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.33"
crossbeam = "0.8.4"
crossterm = "0.28.1"
dirs = "5.0.1"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.11.0"
term_size = "0.3.2"
