[package]
name = "xiny"
version = "0.1.0"
edition = "2021"
description = "Offline CLI reader for Learn X in Y Minutes -- 187 subjects, 38 languages, rendered in your terminal"
license = "GPL-3.0-or-later"
readme = "README.md"

repository = "https://github.com/PsychedelicShayna/xiny"
homepage = "https://github.com/PsychedelicShayna/xiny"

keywords = ["learnxinyminutes", "reference", "terminal", "cli", "cheatsheet"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.33"
crossbeam = "0.8.4"
crossterm = "0.28.1"
dirs = "5.0.1"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.11.0"
term_size = "0.3.2"
